<resources>
    <string name="app_name">Voximplant</string>

    <string name="prompt_login">USER@APP.ACCOUNT</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_call_to">CALL TO</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_audio_call">Audio Call</string>
    <string name="action_video_call">Video Call</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_short_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="alert_login_failed">Login failed</string>
    <string name="alert_login_failed_account_frozen">Login failed due to account is frozen. Please contact your admin</string>
    <string name="alert_login_failed_internal_error">Login failed due to internal error. Please try again</string>
    <string name="alert_login_failed_timeout">Login failed due to timeout. Please try again</string>
    <string name="alert_login_failed_network_issues">Login failed due to network issues. Please try again</string>
    <string name="alert_title_logout">Log out</string>
    <string name="alert_content_logout">You are going to log out! Proceed?</string>
    <string name="alert_content_logout_with_active_calls">You are going to log out! All calls will be ended. Proceed?</string>
    <string name="alert_title_disconnected">Connection error</string>
    <string name="alert_content_disconnected">Connection to server is lost. Please relogin</string>
    <string name="alert_title_connection_failed">Connection failed</string>
    <string name="alert_content_connection_failed">Connection failed, check your internet connection and try again</string>
    <string name="alert_select_audio_device">Audio device</string>
    <string name="alert_positive_button">OK</string>

    <string name="toast_midcall_operation_failed">%1$s is failed due to %2$s</string>

    <string name="title_activity_main">Voximplant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="active_calls">Active Calls</string>
    <string name="log_out">Log out</string>

    <string name="hangup_call">Hangup call</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="mute_audio">Mute/unmute audio</string>
    <string name="speaker_on_off">Enable/disable speakerphone</string>
    <string name="mute_video">Mute/unmute video</string>
    <string name="hold_unhold_call">Hold/unhold call</string>
    <string name="more_settings">More settings</string>
    <string name="send_video">Send Video</string>
    <string name="receive_video">Receive Video</string>

    <string name="recent_calls">Recent calls</string>

    <string name="make_new_call">Make new call</string>

    <string name="call_failed">Call is failed</string>
    <string name="call_connecting">Call is connecting</string>
    <string name="call_ringing">Ringing…</string>
    <string name="audio_is_started">Audio is started</string>
    <string name="audio_call_in_progress">Audio call is in progress</string>
    <string name="incoming_call_from">Incoming call from</string>
    <string name="answer_call">Answer call</string>
    <string name="answer_call_with_video">Answer call with video</string>

    <string name="pref_push_group_title">Push notifications</string>
    <string name="pref_push_enable_key">push_enable</string>
    <string name="pref_push_enable_title">Enable push notifications</string>
    <string name="pref_call_group_title">Call</string>
    <string name="pref_call_vibrate_enable_key">vibrate_enable</string>
    <string name="pref_call_vibrate_enable_title">Vibrate on incoming call</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="call_service_notification_text">call(s) in progress</string>
</resources>
