<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.voximplant.sdkdemo.fragments.CallFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.voximplant.sdkdemo.fragments.PercentFrameLayout
            android:id="@+id/remote_video_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <org.webrtc.SurfaceViewRenderer
                android:id="@+id/remote_video_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </com.voximplant.sdkdemo.fragments.PercentFrameLayout>

        <com.voximplant.sdkdemo.fragments.PercentFrameLayout
            android:id="@+id/local_video_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <org.webrtc.SurfaceViewRenderer
                android:id="@+id/local_video_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </com.voximplant.sdkdemo.fragments.PercentFrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/switch_camera_button"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@mipmap/ic_camera_back"
                android:contentDescription="@string/switch_camera" />

            <ImageButton
                android:id="@+id/speaker_button"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@mipmap/ic_speaker_off"
                android:contentDescription="@string/speaker_on_off" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/more_settings_layout"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_above="@+id/call_controls_bottom"
            android:layout_centerHorizontal="true"
            android:background="@color/colorWhite"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <CheckBox
                    android:id="@+id/send_video_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_video" />

                <CheckBox
                    android:id="@+id/receive_video_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/receive_video" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/call_controls_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/hangup_button"
                android:contentDescription="@string/hangup_call"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@mipmap/ic_hangup" />

            <ImageButton
                android:id="@+id/mute_audio_button"
                android:contentDescription="@string/mute_audio"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@mipmap/ic_mic_off" />

            <ImageButton
                android:id="@+id/hold_button"
                android:contentDescription="@string/hold_unhold_call"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@mipmap/ic_hold" />

            <ImageButton
                android:id="@+id/more_settings_button"
                android:contentDescription="@string/more_settings"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@mipmap/ic_more" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/linearLayout">

                <TextView
                    android:id="@+id/call_status_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
