<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.voximplant.sdkdemo.activities.IncomingCallActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.50"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:id="@+id/incoming_call_text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incoming_call_from"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/incoming_call_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textSize="25sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/answer_call_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@mipmap/ic_audio_call"
                    android:contentDescription="@string/answer_call" />


                <ImageButton
                    android:id="@+id/decline_call_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/ic_hangup"
                    android:contentDescription="@string/hangup_call" />


            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
