<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.voximplant.sdkdemo.activities.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/call_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_call_to"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_audio_call"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@mipmap/ic_audio_call"
                    android:contentDescription="@string/action_audio_call" />

                <ImageButton
                    android:id="@+id/button_video_call"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginStart="60dp"
                    android:layout_weight="1"
                    android:background="@mipmap/ic_video_call"
                    android:contentDescription="@string/action_video_call" />

            </LinearLayout>
        </RelativeLayout>

        <ListView
            android:id="@+id/recent_calls_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/callsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

</android.support.constraint.ConstraintLayout>
